fixed overflow layout

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,8 @@
 
 html {
   scroll-behavior: smooth; /* Smooth scrolling */
+  overflow-x: hidden;
+
 }
 
 
@@ -60,7 +62,8 @@ body {
   margin: 0;
   padding: 0;
   place-items: center;
- 
+  overflow-x: hidden;
+
   
 }
 
